# CloudGuard-Natwest-Hackathon

./: .env.example  .gitignore  DEV_LOCAL.md  README.md  README_HACKATHON_UPGRADE.md  app.py  hackathon_guidelines.md  project_plan.md  requirements.txt
backend/: .env.example  README.md  package-lock.json  package.json
backend/src/: index.js
backend/src/lib/: gemini.js  httpErrors.js  mlClient.js
backend/src/routes/: geminiRoutes.js  mlProxyRoutes.js
data/: README.md  synthetic_cloud_costs.csv
docs/: architecture.md  project_plan_compliance.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: index.css
frontend/src/ui/: App.tsx  api.ts  types.ts
frontend/src/ui/components/ui/: button.tsx  card.tsx  input.tsx  label.tsx  textarea.tsx
infra/: architecture.md
ml-service/: .env.example  README.md  pyproject.toml
ml-service/app/: main.py
ml-service/app/routers/: forecasting.py
ml-service/app/services/: dataset.py
scripts/: backtest.py  generate_dataset.py
src/: data_generator.py  forecasting.py
tests/: test_forecasting.py
